fix: update ansible collection requirements with community.general

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,3 @@
 ---
-- name: elliotweiser.osx-command-line-tools
-- name: geerlingguy.homebrew
-- name: gantsign.visual-studio-code-extensions
+collections:
+- community.general
