--- a/roles/rails/tasks/main.yml
+++ b/roles/rails/tasks/main.yml
@@ -57,3 +57,11 @@
 
 - name: 'rehash'
   command: "~{{ macbook_user.stdout }}/.rbenv/bin/rbenv rehash"
+
+- name: print role name
+  set_fact:
+    parent_role_name:  "{{ role_name }}"
+
+- name: add version
+  include_role:
+    name: version
