--- a/setup.yml
+++ b/setup.yml
@@ -1,5 +1,5 @@
 ---
-- name: Get the version
+- name: before everything
   hosts: localhost
   tags: always
   tasks:
@@ -31,7 +31,18 @@
     - { role: desktop, tags: [desktop, setup] }
     - { role: elastic, tags: [elastic, setup] }
 
-- name: Are we ready?
+- name: After everything
   hosts: localhost
-  roles:
-    - { role: checkhost, tags: always }
+  tags: always
+  tasks:
+    - name: does host file exist?
+      stat:
+        path: hosts
+      register: hosts
+
+    - name: display post install message
+      debug:
+        msg:
+          - 'Host file not set up yet. To set it up run the following'
+          - 'make thistarget'
+      when: not hosts.stat.exists
