fix: rename checkhost role to afterwards and only register if defined

--- a/remote_login.yml
+++ b/remote_login.yml
@@ -15,4 +15,4 @@
 - name: Are we ready?
   hosts: localhost
   roles:
-    - { role: checkhost, tags: always }
+    - { role: afterwards, tags: always }
