--- a/roles/version/tasks/main.yml
+++ b/roles/version/tasks/main.yml
@@ -17,3 +17,4 @@
     line: "{{ parent_role_name }}: {{ hostvars['localhost']['macfair_version'].stdout[1:-1] }}"
     regexp: '{{ parent_role_name }}'
     insertbefore: BOF
+  when: hostvars['localhost']['macfair_version'] is defined
