fix: Only cope iterm profiles if iterm installed/setup

--- a/roles/terminal/tasks/darwin.yml
+++ b/roles/terminal/tasks/darwin.yml
@@ -24,10 +24,16 @@
 - name: Create iterm preferences by opening
   shell: open -a iTerm
 
+- name: register iterm location
+  stat:
+    path: ~{{ macbook_user.stdout }}/Library/Application Support/iTerm2
+  register: iterm_path
+
 - name: copy iterm profiles
   template:
     src: iterm.json.j2
     dest: ~{{ macbook_user.stdout }}/Library/Application Support/iTerm2/DynamicProfiles/iterm.json
+  when: iterm_path.stat.exists
 
 - name: set default iterm profile
   shell: echo -e "\033]50;SetProfile=coffee\a"
