--- a/newtarget.yml
+++ b/newtarget.yml
@@ -1,17 +1,19 @@
 ---
-- hosts: localhost
-  connection: local 
-
+- name: Setup a new machine
+  hosts: localhost
+  connection: local
   vars_prompt:
     - name: target
       prompt: What is the hostname of the new target?
-      private: no
+      private: false
     - name: user
       prompt: What is the username of the default user?
-      private: no
+      private: false
+      default: deploy
     - name: group
       prompt: Which group to add to in inventory?
-      private: no
+      private: false
+      default: debian
   tasks:
     - name: Create vars folder for new target
       file:
@@ -24,19 +26,19 @@
         dest: "{{ playbook_dir }}/host_vars/{{ target }}/vars.yml"
 
     - name: Add target to inventory file.
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "{{ playbook_dir }}/hosts"
         line: "{{ target }}"
         insertafter: "{{ group }}"
 
     - name: Add ansible user to ssh list.
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "{{ playbook_dir }}/host_vars/localhost.yml"
         line: "  - { username: {{ user }}@{{ target }}, userkey: ~/.ssh/id_rsa.pub }"
         insertafter: "users"
 
     - name: Add root user to ssh list.
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "{{ playbook_dir }}/host_vars/localhost.yml"
         line: "  - { username: root@{{ target }}, userkey: ~/.ssh/id_rsa.pub }"
         insertafter: "root"
