fix: Rename thistarget to thiscomputer and documentation on rule
also add back in changing of hostname as part of rule

--- a/roles/afterwards/tasks/main.yml
+++ b/roles/afterwards/tasks/main.yml
@@ -8,5 +8,5 @@
   debug:
     msg:
       - 'Host file not set up yet. To set it up run the following'
-      - 'make thistarget'
+      - 'make thiscomputer'
   when: not hosts.stat.exists
