--- a/sites/Makefile
+++ b/sites/Makefile
@@ -1,1 +1,5 @@
 ANSIBLE=$$(python3 -m site --user-base)/bin/
+newsite:
+	ansible-playbook ../newsite.yml -i ../hosts
+rhyl.io37.ch:
+	ansible-playbook rhyl.io37.ch.yml -i ../hosts
