feat: add dnsmasq configuration or local and 192.168.1.80 domains
configures dnsmasq to resolve *.pi domains to 192.168.1.80 and *.yay domains to 127.0.0.1

--- a/roles/aliases/tasks/darwin.yml
+++ b/roles/aliases/tasks/darwin.yml
@@ -73,3 +73,6 @@
     path: ~/.zshrc
     line: source $HOME/.zsh/rails
   when: rbenv.stat.exists
+
+- name: import dnsmasq.yml
+  import_tasks: dnsmasq.yml
