feat: Add dns aliases into own file (darwin only)
dnsmasq -> add local domains to dnsmasq
dnsvpn -> bypass openvpns dns servers so local lookups still work when on vpn

--- a/roles/aliases/tasks/darwin.yml
+++ b/roles/aliases/tasks/darwin.yml
@@ -77,3 +77,8 @@
 - name: import dnsmasq.yml
   import_tasks: dnsmasq.yml
   when: inventory_hostname != 'github-runner.localhost'
+
+- name: Copy dns aliases
+  copy:
+    src: zsh/dns
+    dest: ~{{ macbook_user.stdout }}/.zsh/dns
