--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -4,6 +4,7 @@
   with_items:
     - "astro-build.astro-vscode"
     - "GitHub.copilot"
+    - "esbenp.prettier-vscode"
     - "styled-components.vscode-styled-components"
     - "abalejr.forest-focus"
     - "aregghazaryan.glass-ui"
