fix: update newsite role to only run in one host not all in debian group
- add group_vars to gitignore
- search for group in host file correctly
- rename unused group in hosts to sites
- update sites Makefile to use includes rather than filling out its own makefile
- update newsite to create makefile persite and populate sites group in main inventory file
- run fqdn target only on specified host, not all targets in debian group
- add make vars to update site specific vars if necessary

--- a/newcomputer.yml
+++ b/newcomputer.yml
@@ -29,7 +29,7 @@
       ansible.builtin.lineinfile:
         path: "{{ playbook_dir }}/hosts"
         line: "{{ target }}"
-        insertafter: "{{ group }}"
+        insertafter: "\\[{{ group }}\\]"
 
     - name: Add ansible user to ssh list.
       ansible.builtin.lineinfile:
