--- a/newsite.yml
+++ b/newsite.yml
@@ -1,11 +1,11 @@
 ---
 - hosts: localhost
-  connection: local 
+  connection: local
 
   vars_prompt:
     - name: app_name
-      prompt: What is your app_name? - supply full url if you know it
-      private: no
+      prompt: "Enter url of new site"
+      private: false
   tasks:
     - name: Create main yml
       template:
@@ -16,6 +16,24 @@
         src: template.nginx.conf.j2
         dest: "{{ playbook_dir }}/sites/files/{{ app_name }}.nginx.conf"
     - name: append to makefile.
-      lineinfile:
-        path: "{{ playbook_dir }}/sites/Makefile"
-        line: "{{ app_name }}:\n\tansible-playbook {{ app_name}}.yml -i ../hosts"
+      template:
+        dest: "{{ playbook_dir }}/sites/makefiles/{{ app_name }}"
+        src: Makefile.j2
+
+    - name: Add target to inventory file.
+      ansible.builtin.lineinfile:
+        path: "{{ playbook_dir }}/hosts"
+        line: "{{ app_name }}"
+        insertafter: "\\[sites\\]"
+
+    - name: Create default site vars directory if doesnt exist
+      file:
+        state: directory
+        path: "{{ playbook_dir }}/group_vars/sites"
+        force: false
+
+    - name: Create default site vars if doesnt exit
+      copy:
+        content: "ansible_user: deploy"
+        dest: "{{ playbook_dir }}/group_vars/sites/default.yml"
+        force: false
