--- a/setup.yml
+++ b/setup.yml
@@ -8,11 +8,11 @@
   hosts: [macbook, debian]
   roles:
     - { role: whoami, tags: [always] }
-    - { role: install, tags: [install, setup] }
-    - { role: aliases, tags: [aliases, install, setup] }
-    - { role: terminal, tags: [terminal, setup] }
-    - { role: rails, tags: [rails] }
-    - { role: vscode, tags: [vscode, setup] }
+    - { role: install, tags: [install, setup, info] }
+    - { role: aliases, tags: [aliases, install, setup, info] }
+    - { role: terminal, tags: [terminal, setup, info] }
+    - { role: rails, tags: [rails, info] }
+    - { role: vscode, tags: [vscode, setup, info] }
 
 - name: Setup debian machines
   hosts: [debian]
@@ -25,7 +25,7 @@
 - name: Setup macbook
   hosts: macbook
   roles:
-    - { role: desktop, tags: [desktop, setup] }
+    - { role: desktop, tags: [desktop, setup, info] }
 
 - name: After everything
   hosts: localhost
