--- a/.github/workflows/docsite.yml
+++ b/.github/workflows/docsite.yml
@@ -2,7 +2,7 @@ name: Docs
 on:
   push:
     branches:
-      - publish-docs
+      - main
 
 jobs:
   changelog:
@@ -31,7 +31,7 @@ jobs:
         run: cp -r docs/*md site/src/content/docs
 
       - name: copies top level mds
-        run: cp *md site/src/content/top
+        run: for f in *.md; do cp "$f" "site/src/content/top/$(echo "$f" | tr '[:upper:]' '[:lower:]' )"; done
 
       - name: copies top readme to index
         run: cp README.md site/src/content/top/index.md
