feat: Create cron jobs for batt and dfh
- Add cron job for batt alias to run every 15 minutes.
- Add cron job for dfh alias to run every 15 minutes.

--- a/roles/aliases/tasks/darwin.yml
+++ b/roles/aliases/tasks/darwin.yml
@@ -82,3 +82,15 @@
   copy:
     src: zsh/dns
     dest: ~{{ macbook_user.stdout }}/.zsh/dns
+
+- name: Setup cron for batt
+  ansible.builtin.cron:
+    name: Batt cron
+    minute: "0,15,30,45"
+    job: ". $HOME/.zshrc; batt cron"
+
+- name: Setup cron for dfh
+  ansible.builtin.cron:
+    name: dfh cron
+    minute: "0,15,30,45"
+    job: ". $HOME/.zshrc; dfh cron"
