feat: add aliases for supabase
- add supa alias to populate env file with supabase credentials
- add supas alias to list supabase applications

--- a/roles/aliases/tasks/main.yml
+++ b/roles/aliases/tasks/main.yml
@@ -14,6 +14,11 @@
     src: zsh/godaddy
     dest: ~{{ macbook_user.stdout }}/.zsh/godaddy
 
+- name: Copy supabase file
+  copy:
+    src: zsh/supabase
+    dest: ~{{ macbook_user.stdout }}/.zsh/supabase
+
 - name: Copy macfair file (this machine)
   template:
     src: zsh/macfair
