feat: base iterm and zsh themes on vars
- set up make thiscomputer and make newcomputer to create vars for themes
- remove references to hardcoded themes

--- a/roles/aliases/tasks/darwin.yml
+++ b/roles/aliases/tasks/darwin.yml
@@ -1,7 +1,7 @@
 ---
 - name: Copy zshrc
-  copy:
-    src: zshrc
+  template:
+    src: zshrc.j2
     dest: ~{{ macbook_user.stdout }}/.zshrc
 
 - name: Create zsh directory
