--- a/roles/aliases/tasks/darwin.yml
+++ b/roles/aliases/tasks/darwin.yml
@@ -1,32 +1,12 @@
 ---
-- name: Copy zshrc
-  template:
-    src: zshrc.j2
-    dest: ~{{ macbook_user.stdout }}/.zshrc
-
-- name: Create zsh directory
-  file:
-    path: "~{{ macbook_user.stdout }}/.zsh"
-    state: directory
-
-- name: Copy aliases
-  copy:
-    src: zsh/aliases
-    dest: ~{{ macbook_user.stdout }}/.zsh/aliases
-
 - name: Copy darwin
   copy:
     src: zsh/darwin
     dest: ~{{ macbook_user.stdout }}/.zsh/darwin
 
-- name: Copy git aliases
-  copy:
-    src: zsh/git
-    dest: ~{{ macbook_user.stdout }}/.zsh/git
-
 - name: Add darwin to path.
   lineinfile:
-    path: ~/.zsh/aliases
+    path: ~/.zsh/main
     line: source ~/.zsh/darwin
     insertbefore: BOF
 
