--- a/roles/aliases/tasks/git.yml
+++ b/roles/aliases/tasks/git.yml
@@ -1,3 +1,8 @@
+- name: Copy git aliases
+  copy:
+    src: zsh/git
+    dest: ~{{ macbook_user.stdout }}/.zsh/git
+
 - name: Copy gitconfig
   template:
     src: gitconfig.j2
