--- a/roles/install/tasks/debian.yml
+++ b/roles/install/tasks/debian.yml
@@ -1,4 +1,10 @@
 ---
+- name: install docker for hosts tagged with docker
+  import_tasks: docker.yml
+  become: true
+  become_user: root
+  when: "hostvars[inventory_hostname].docker is defined"
+
 - name: "roles/apt-task/tasks/main Add GitHub CLI gpg key"
   shell: curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg --yes
   become: true
@@ -26,7 +32,7 @@
   apt:
     name:
       - git
-      - gh 
+      - gh
       - jq
       - nginx
       - firefox-esr
