wip: running a function from the m aliases

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,5 +38,8 @@ jobs:
       - name: Show hostname
         run: hostname
 
-      - name: is there a zshrc
-        run: cat ~/.zshrc
+      - name: source zshrc
+        run: source ~/.zshrc
+
+      - name: run a command
+        run: aliases
