--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Show hostname
         run: hostname
 
-      - name: is there a zsh
-        run: zsh --version
+      - name: switch to zsh
+        run: chsh -s $(which zsh)
 
       - name: source zshrc
         run: source ~/.zshrc
