--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,9 @@ on:
 jobs:
   macbook:
     runs-on: macos-latest
-
+    defaults:
+      run:
+        shell: zsh
     steps:
       - uses: actions/checkout@v3
 
