wip: checking hostname of gh action xii

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,18 @@ on:
 jobs:
   macbook:
     runs-on: macos-latest
-
+    defaults:
+      run:
+        shell: zsh
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v3
 
+      - name: Initialize Oh My Zsh
+        run: |
+          echo "source ~/.oh-my-zsh/oh-my-zsh.sh" >> ~/.zshrc
+          echo "export ZSH=\"/Users/runner/.oh-my-zsh\"" >> ~/.zshrc
+          echo "ZSH_THEME=\"robbyrussell\"" >> ~/.zshrc
       - name: Print the readme
         run: make help
 
